[gd_scene load_steps=3 format=3 uid="uid://2fmcrv47lgpe"]

[ext_resource type="Script" path="res://scripts/menus/game_over_menu.gd" id="1_agk7f"]
[ext_resource type="Theme" uid="uid://odxvlb3cuew4" path="res://assets/themes/my_theme.tres" id="1_omteo"]

[node name="GameOverMenu" type="CanvasLayer"]
script = ExtResource("1_agk7f")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -442.0
offset_top = -342.0
offset_right = 442.0
offset_bottom = 342.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TextContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="GameOverText" type="Label" parent="PanelContainer/VBoxContainer/TextContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_type_variation = &"MenuTitle"
text = "Game Over"
horizontal_alignment = 1

[node name="RoundText" type="Label" parent="PanelContainer/VBoxContainer/TextContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SubTitle"
text = "You reached round 1"
horizontal_alignment = 1

[node name="ScoreText" type="Label" parent="PanelContainer/VBoxContainer/TextContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SubTitle"
text = "Your score was "
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_omteo")
theme_type_variation = &"Spacer"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"SubTitle"
text = "Name:"

[node name="NameField" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("1_omteo")

[node name="SubmitButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ButtonMain"
text = "Submit"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Spacer"

[node name="SubmittedText" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"SubTitle"
text = "Score Submitted!"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_omteo")
theme_type_variation = &"Spacer"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 30

[node name="ButtonRetry" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_omteo")
theme_type_variation = &"ButtonMain"
text = "Retry"

[node name="ButtonOptions" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"ButtonMain"
text = "Options"

[node name="ButtonQuit" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_type_variation = &"ButtonMain"
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer2/ButtonRetry" to="." method="_on_button_retry_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer2/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer2/ButtonQuit" to="." method="_on_button_quit_pressed"]
